@@ -1,3 +1,10 @@
+2008-08-12 Jens Tkotz <jens@peino.de> 1.5.8-pl1-svn-b9
+
+ * Fix: Current settings of locale_alias were not selected
+        and thus could overwritten by a different value.
+
+   Thanks to Andrew Vasilyev.
+
 2008-08-12 Jens Tkotz <jens@peino.de> 1.5.8-pl1-svn-b8
 
  * FIX: Album::deletePhoto did not return true on success.
